# trafficserver

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile.am  NOTICE  compile_commands.json  configure.ac  rio.yml
apple/: build.sh  rio.sh  run_autest.sh
apple/specs/: bazinga-trafficserver.spec
ci/asan_leak_suppression/: unit_tests.txt
cmake/: Findhwloc.cmake
cmd/traffic_quic/: traffic_quic.cc
configs/: storage.yaml.default.in
example/early-hints/: Makefile.tsxs  README.md  early-hints.c
include/tscore/: Diags.h  Filenames.h  I_Layout.h  Regex.h  ink_config.h.cmake.in  ink_config.h.in  ink_hrtime.h  ink_lockfile.h  ink_queue.h
iocore/: Makefile.am
iocore/aio/: test_AIO.cc
iocore/cache/: Cache.cc  CacheDir.cc  CacheDisk.cc  CacheHosting.cc  CachePages.cc  CachePagesInternal.cc  CacheRead.cc  CacheTest.cc  CacheVol.cc  CacheWrite.cc  I_Cache.h  I_Store.h  Makefile.am  P_CacheDisk.h  P_CacheInternal.h  P_CacheVol.h  RamCacheCLFUS.cc  RamCacheLocklessLRU.cc  Store.cc
iocore/dns/: DNS.cc  I_DNSProcessor.h
iocore/eventsystem/: IOBuffer.cc  I_Continuation.h  I_EThread.h  I_EventProcessor.h  I_IOBuffer.h  I_Lock.h  Makefile.am  P_UnixEThread.h  SharedLock.h  UnixEThread.cc
iocore/hostdb/: HostDB.cc  P_HostDBProcessor.h
iocore/net/: BIO_fastopen.cc  Connection.cc  I_NetProcessor.h  I_NetVConnection.h  Makefile.am  OCSPStapling.cc  P_Connection.h  P_Net.h  (+31 more)
iocore/resource/: DesignNote.md  Makefile.am  README.md  RTBAlgorithmV0.h  RTBAlgorithmV1.h  RTBStatsType.h  ReactiveTokenBucket.h  Resource.cc  Resource.h  ResourceConfig.cc  ResourceConfig.h  ResourceConstraints.cc  ResourceConstraints.h  ResourceManager.cc  ResourceManager.h  ResourceStats.cc  ResourceStats.h  test_test_scenario
iocore/resource/unit_tests/: test_ReactiveTokenBucket.cc  test_Reporter.h  test_scenario.cc
iocore/resource/unit_tests/data/: scenario0.csv  scenario1.csv  scenario2.csv
mgmt/: LocalManager.cc  LocalManager.h  RecordsConfig.cc  WebMgmtUtils.cc  WebMgmtUtils.h
proxy/: ControlMatcher.h  Main.cc  ParentConsistentHash.cc  ParentSelection.cc  ParentSelection.h  ParentSelectionStrategy.cc  ProtocolProbeSessionAccept.cc  ProxySession.cc  ProxySession.h  ProxyTransaction.cc  ProxyTransaction.h
tests/: Pipfile  README.md
(+210 files in other folders)
